@@ -4,6 +4,8 @@
 <!-- Windows PowerShell mode -->
 <MODE>
 	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="&lt;#" />
+		<PROPERTY NAME="commentEnd" VALUE="#&gt;" />
 		<PROPERTY NAME="lineComment" VALUE="#" />
 		<PROPERTY NAME="indentOpenBrackets" VALUE="{" />
 		<PROPERTY NAME="indentCloseBrackets" VALUE="}" />
@@ -136,6 +138,11 @@
 		DIGIT_RE="[0-9][0-9a-zA-Z]*"
 		NO_WORD_SEP="-">
  		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
+ 		
+ 		<SPAN TYPE="COMMENT2">
+ 			<BEGIN>&lt;#</BEGIN>
+			<END>#&gt;</END>
+		</SPAN>
 
 		<SEQ_REGEXP HASH_CHAR="$" TYPE="KEYWORD2">[\$]+[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*</SEQ_REGEXP>
 
